--- a/main.html
+++ b/main.html
@@ -34,6 +34,9 @@
       </div>
     </div>
     <h1 class="h1">asdhlasld</h1>
+
+    <!--SCRIPT PLACE -->
+
     <script src="script.js"></script>
   </body>
 </html>
