--- a/main.html
+++ b/main.html
@@ -30,12 +30,14 @@
         </div>
         <div class="slide">
           <img src="penro (7).jpg" alt="Slide 1" />
+          <!--NIGGA -->
         </div>
       </div>
     </div>
     <h1 class="h1">asdhlasld</h1>
 
     <!--SCRIPT PLACE -->
+
 
     <script src="script.js"></script>
   </body>
