--- a/SeedlingInfo.html
+++ b/SeedlingInfo.html
@@ -1,1 +1,14 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Seedling Request</title>
+  </head>
+  <body>
+    <p>asddas</p>
+    <p>asd</p>
+    <p>asd</p>
+    <p>asd</p>
+  </body>
+</html>
