--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sticky Navigation with Smooth Scroll</title>
-    <link rel="stylesheet" href="trial.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
 
   <body>
