updating gayahin mo nalang design ko

--- a/Permit.html
+++ b/Permit.html
@@ -12,13 +12,13 @@
     <header>
         <div id="header">
             <div class="container">
-                
+
                 <ul>
-                  <li><a href="#Header" class="nav-link">Home</a></li>
-                  <li><a href="#Services" class="nav-link">Services</a></li>
-                  <li><a href="#Team" class="nav-link">Team</a></li>
+                  <li><a href="#header" class="nav-link">Home</a></li>
+                  <li><a href="#services" class="nav-link">Services</a></li>
+                  <li><a href="#team" class="nav-link">Team</a></li>
                   <li><a href="#FAQs" class="nav-link">FAQs</a></li>
-                  <li><a href="#Login" class="nav-link">Login</a></li>
+                  <li><a href="#login" class="nav-link">Login</a></li>
                 </ul>
             </div>  
         </div>
