Ito initial fcking Design

--- a/Permit.html
+++ b/Permit.html
@@ -1,30 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA- Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sand,Gravel and Quarry Permit</title>
-    <link rel="stylesheet" href="Permit.css" />
-  </head>
-
-  <body>
-    <header>
-        <div id="header">
-            <div class="container">
-
-                <ul>
-                  <li><a href="#header" class="nav-link">Home</a></li>
-                  <li><a href="#services" class="nav-link">Services</a></li>
-                  <li><a href="#team" class="nav-link">Team</a></li>
-                  <li><a href="#FAQs" class="nav-link">FAQs</a></li>
-                  <li><a href="#login" class="nav-link">Login</a></li>
-                </ul>
-            </div>  
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Sand, Gravel / Quarry Permit</title>
+    <link rel="stylesheet" href="Permit.css">
+</head>
+<body>
+    <div class="header">
+        <div class="logo">
+            <img src="logo.png" alt="Provincial Environment and Natural Resources Office">
         </div>
-    </header>
+        <div class="office-info">
+            <h1>PROVINCIAL ENVIRONMENT AND NATURAL RESOURCES OFFICE</h1>
+            <h2>Sand, Gravel / Quarry Permit</h2>
+        </div>
+    </div>
 
-    
-   
+    <div class="content">
+        <h3>Head of the Office: ENGR. LEOPOLDO P. BADIOLA</h3>
+        <p>Schedule of Availability of Service: Monday to Friday, 8:00 AM - 12:00 NN, 1:00 PM - 5:00 PM</p>
+
+        <table class="details">
+            <tr>
+                <td><strong>Office/Division:</strong></td>
+                <td>Provincial Environment and Natural Resources Office</td>
+            </tr>
+            <tr>
+                <td><strong>Type of Transaction:</strong></td>
+                <td>Processing of Request for Forest Tree Seedlings</td>
+            </tr>
+            <tr>
+                <td><strong>Who May Avail:</strong></td>
+                <td>All Interested Individuals</td>
+            </tr>
+        </table>
+
+        <h4>Client Steps</h4>
+        <table class="process">
+            <thead>
+                <tr>
+                    <th>Client's Steps</th>
+                    <th>Agency Action</th>
+                    <th>Fees to be Paid</th>
+                    <th>Processing Time</th>
+                    <th>Person Responsible</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Proceed to Office of the Government. Submit letter-request stating the species, number of seedlings, and location of planting site (private or public land).</td>
+                    <td>Approves request and forwards to PG-PENRO.</td>
+                    <td>-</td>
+                    <td>Depending on availability of the signatory</td>
+                    <td>Office of the Governor/Authorized Representative</td>
+                </tr>
+                <tr>
+                    <td>Follow-up request at PG-PENRO.</td>
+                    <td>Provides client with a short briefing, determines number of seedlings, and provides requirement.</td>
+                    <td>-</td>
+                    <td>30 minutes</td>
+                    <td>Engr. Leopoldo P. Badiola, EnP. Donna A. Guevarra, etc.</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
