nagawa ko na pa check

--- a/Permit.html
+++ b/Permit.html
@@ -3,82 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sand, Gravel / Quarry Permit</title>
-    <link rel="stylesheet" href="Permit.css">
+    <title>Forest Tree Seedlings</title>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=League+Spartan:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Permit.css"> <!-- Link to the CSS file -->
 </head>
 <body>
     <header>
         <div class="header-content">
-            <img src="logo.png" alt="Logo" class="logo">
-            <div class="header-text">
-                <h1>Republic of the Philippines</h1>
-                <h2>Provincial Environment and Natural Resources Office</h2>
-            </div>
+            <img src="government-logo.png" alt="Government Logo" class="logo">
+            <h1 class="title">SAND, GRAVEL / QUARRY PERMIT</h1> <!-- Updated title -->
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">FAQs</a></li>
+                </ul>
+                <button class="login-button">Login</button> <!-- Login button -->
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Team</a></li>
-                <li><a href="#">FAQs</a></li>
-            </ul>
-            <button class="login-btn">Login</button>
-        </nav>
     </header>
-
     <main>
-        <section class="permit-section">
-          <div>
-            <h1>SAND, GRAVEL / QUARRY PERMIT</h1>
-          </div>
-            <div class="permit-details">
-                <p><strong>Head of the Office:</strong> ENGR. LEOPOLDO P. BADIOLA</p>
-                <p><strong>Schedule of Availability of Service:</strong> Monday to Friday 8:00 AM - 12:00 NN, 1:00 PM - 5:00 PM</p>
-                <p><strong>Office/Division:</strong> Provincial Environment and Natural Resources Office</p>
-                <p><strong>Type of Transaction:</strong> Processing of Request for Forest Tree Seedlings</p>
-                <p><strong>Who May Avail:</strong> All Interested Individuals</p>
-            </div>
+        <section class="info-section">
+            <p>HEAD OF THE OFFICE: <strong>ENGR. LEOPOLDO P. BADIOLA</strong></p>
+            <p>SCHEDULE OF AVAILABILITY OF SERVICE: MONDAY TO FRIDAY</p>
+            <p>8:00 AM-12:00 NN, 1:00 PM-5:00 PM</p>
+
+            <p>Office/Division: <strong>PROVINCIAL ENVIRONMENT AND NATURAL RESOURCES OFFICE</strong></p>
+            <p>Type Of Transaction: <strong>PROCESSING OF REQUEST FOR FOREST TREE SEEDLINGS</strong></p>
+            <p>Who May Avail: <strong>ALL INTERESTED INDIVIDUALS</strong></p>
         </section>
 
-        <section class="process-table">
+        <section class="table-section">
             <table>
                 <thead>
                     <tr>
-                        <th>Client Steps</th>
-                        <th>Agency Action</th>
-                        <th>Fees to be Paid</th>
-                        <th>Processing Time</th>
-                        <th>Person Responsible</th>
+                        <th>CLIENTS STEPS</th>
+                        <th>AGENCY ACTION</th>
+                        <th>FEES TO BE PAID</th>
+                        <th>PROCESSING TIME</th>
+                        <th>PERSON RESPONSIBLE</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Submit letter-request stating species, number of seedlings, location.</td>
-                        <td>Approves request and forwards to PG-PENRO.</td>
-                        <td>-</td>
-                        <td>Depending on availability.</td>
-                        <td>Office of the Governor/Authorized Representative</td>
+                        <td>Proceed To Office Of The Governor. Submit Letter-Request Stating The Species, Number Of Seedlings And Location Of Planting Site (Private Or Public Land)</td>
+                        <td>Approves Request And Forwards To PG-PENRO</td>
+                        <td></td>
+                        <td>Depending On The Availability Of The Signatory</td>
+                        <td>Office Of The Governor/Authorized Representative</td>
                     </tr>
                     <tr>
-                        <td>Follow-up request at PG-PENRO.</td>
-                        <td>Provides briefing and study request. Issues promissory note.</td>
-                        <td>-</td>
+                        <td>Follow-Up Request At PG-PENRO</td>
+                        <td>Provides Client With A Short Briefing On The Service; Study The Request And Determine The Number Of Seedlings To Be Given; And Provide Requirement (Promissory Note) To The Client</td>
+                        <td></td>
                         <td>30 Minutes</td>
-                        <td>Engr. Leopoldo P. Badiola, EnP. Donna A. Guevarra, etc.</td>
+                        <td>Engr. Leopoldo P. Badiola, EnP. Donna A. Guevarra, For. Gil B. Badaguas Jr., Ms. Emerine A. San Gaspar</td>
                     </tr>
-                    <!-- Add more rows as per your needs -->
+                    <tr>
+                        <td>Fill-Up Promissory Note Provided By PENRO</td>
+                        <td>Recommend To The Governor The Number Of Seedlings To Be Given</td>
+                        <td></td>
+                        <td>15 Minutes</td>
+                        <td>Engr. Leopoldo P. Badiola</td>
+                    </tr>
+                    <tr>
+                        <td>Office Of The Governor Approve/Disapprove Recommendation Of PENRO And Forwards The Promissory Note To PENRO</td>
+                        <td></td>
+                        <td></td>
+                        <td>Depending On The Availability Of The Signatory</td>
+                        <td>Office Of The Governor/Authorized Representative</td>
+                    </tr>
+                    <tr>
+                        <td>Proceed To PG-PENRO To Follow-Up The Promissory Note. If Approved, Receive A Copy Of The Document.</td>
+                        <td>Release A Copy Of The Promissory Note To The Requesting Individual</td>
+                        <td></td>
+                        <td>10 Minutes</td>
+                        <td>Ms. Emerine A. San Gaspar</td>
+                    </tr>
+                    <tr>
+                        <td>Proceed to Basud Nursery, Basud, Cam. Norte. Present To The Nursery Laborer/S Copy Of Promissory Note, Pick Up Seedlings</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>Mr. Nomer Encinas, Other Nursery Staff</td>
+                    </tr>
                 </tbody>
             </table>
         </section>
 
-        <div class="actions">
-            <button class="request-btn">Apply for New Request</button>
-            <button class="permit-btn">Apply for New Permit</button>
-        </div>
+        <section class="button-section">
+            <button class="green-button">Apply For New Request</button>
+            <button class="red-button">Apply For New Permit</button>
+        </section>
     </main>
 
     <footer>
-        <p>&copy; Provincial Environment and Natural Resources Office</p>
+        <!-- Footer content goes here -->
     </footer>
 </body>
 </html>
